[package]
name = "module-graph"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
swc_ecma_parser = { version = "0.78.5", features = ["typescript"] }
swc_ecma_ast = "0.58.0"
swc_common = { version = "0.14.6", features = ["tty-emitter"] }