[package]
name = "module-graph"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
path-clean = "0.1.0"
swc_atoms = {version = "0.2.4"}
swc_common = {version = "0.17.0", features = ["tty-emitter"]}
swc_ecma_ast = {version = "0.69.0"}
swc_ecma_codegen = {version = "0.94.0"}
swc_ecma_loader = {version = "0.29.0", features = ["node", "cache"]}
swc_ecma_parser = {version = "0.92.0"}
swc_ecma_transforms_base = {version = "0.66.0"}
swc_ecma_transforms_optimization = {version = "0.99.0"}
swc_ecma_utils = {version = "0.71.0"}
swc_ecma_visit = {version = "0.55.0"}
swc_fast_graph = {version = "0.4.0"}
swc_graph_analyzer = {version = "0.4.0"}
tracing = "0.1.31"
swc_ecma_minifier = {version = "0.87.0"}
swc_ecma_transforms_react = {version = "0.91.0"}
swc_ecma_transforms_typescript = {version = "0.94.0"}
swc_node_base = {version = "0.5.0"}
swc_bundler = {version = "0.120.0"}